--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
 
+        <!-- Fonts -->
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet"> 
+
+        <!-- CSS -->
         <link rel="stylesheet" href="sass/main.css" />
+
+        <!-- Feather icons -->
         <script src="https://unpkg.com/feather-icons"></script>
-        <script src="https://kit.fontawesome.com/7ea7b036d0.js" crossorigin="anonymous"></script>
     </head>
     <body class="">
         <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1"
